# wsolver

./: LICENSE  README.md  pyproject.toml  wsolver.py
wsolver/: __init__.py  wsolver.py
