[project]
name = "wsolver"
version = "0.0.1"
description = "An efficient tool based on numerical methods for solving all real roots of nonlinear equations. "
requires-python = ">=3.7"
dependencies = []
authors = [
    { name = "Zuoyuan Wang", email = "1179422870@qq.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
keywords = [
    "nonlinear",
    "equations",
    "solver",
]
urls.Homepage = "http://www.fangchengzu.com"
urls.Documentation = "http://www.fangchengzu.com/document"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"wsolver/lib" = "wsolver/lib"